[metadata]
name = articat
author = Related Sciences LLC
author_email = rav@related.vc
license = Apache
description = articat: data artifact catalog
long_description_content_type=text/markdown
long_description = file: README.md
url = https://github.com/related-sciences/articat
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    data
    catalog
    metadata
    data-discovery
    data-catalog

[options]
packages = articat
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
scripts =
    bin/articat
python_requires = >=3.8
# TODO: review, relax
install_requires =
    dulwich >= 0.20.15
    gcsfs >= 0.6.0
    google-cloud-bigquery == 2.13.1
    google-cloud-datastore == 1.15.0
    papermill == 2.3.3
    pydantic >= 1.8.0

[flake8]
ignore =
    E203
    E402
    E501
    E731
    W503
    E231
    W291
    F821
    F811

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy]
[mypy-pytest.*]
ignore_missing_imports = True
[mypy-_pytest.*]
ignore_missing_imports = True
[mypy-dulwich.*]
ignore_missing_imports = True
[mypy-pydantic.*]
ignore_missing_imports = True
[mypy-coloredlogs.*]
ignore_missing_imports = True
[mypy-pandas.*]
ignore_missing_imports = True
[mypy-fsspec.*]
ignore_missing_imports = True
[mypy-gcsfs.*]
ignore_missing_imports = True
[mypy-pyspark.*]
ignore_missing_imports = True
[mypy-google.cloud.*]
ignore_missing_imports = True
[mypy-papermill.*]
ignore_missing_imports = True
[mypy-nbformat.*]
ignore_missing_imports = True
[mypy-nbconvert.*]
ignore_missing_imports = True
[mypy-cfgv.*]
ignore_missing_imports = True
[mypy-dateutil.*]
ignore_missing_imports = True
[mypy-fire.*]
ignore_missing_imports = True
[mypy-setuptools.*]
ignore_missing_imports = True
[mypy-*.tests.*,conftest]
disallow_incomplete_defs = False
disallow_untyped_defs = False
disallow_untyped_decorators = False
